[gd_scene load_steps=2 format=3 uid="uid://twxevxk1nvbs"]

[ext_resource type="Script" path="res://UI/Orders/OrderUI.gd" id="1_jmd3j"]

[node name="OrderUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmd3j")

[node name="OrderTimer" type="Timer" parent="."]

[connection signal="timeout" from="OrderTimer" to="." method="_on_order_timer_timeout"]
